appId: io.salmonwallet.app
---
- runFlow: ../../../subflows/onboard-walletA.yaml
- runFlow: ../../../subflows/open-settings.yaml
- assertVisible:
    id: 'settings-screen'
- tapOn:
    id: 'settings-item-accounts'
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: screenshots/smoke/settings/accounts
- runFlow: ../../../subflows/settings-back.yaml
- assertVisible:
    id: 'settings-screen'
