appId: io.salmonwallet.app
---
- runFlow: ../../../subflows/onboard-walletA.yaml
- runFlow: ../../../subflows/open-settings.yaml
- assertVisible:
    id: 'settings-screen'
- scrollUntilVisible:
    element:
      id: 'settings-item-support'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'settings-item-support'
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: screenshots/smoke/settings/help
- runFlow: ../../../subflows/settings-back.yaml
- assertVisible:
    id: 'settings-screen'
