appId: io.salmonwallet.app
---
- runFlow: ../../../subflows/onboard-walletA.yaml
- runFlow: ../../../subflows/open-settings.yaml
- assertVisible:
    id: 'settings-screen'
- tapOn:
    id: 'settings-item-display-language'
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: screenshots/smoke/settings/language
- runFlow: ../../../subflows/settings-back.yaml
- assertVisible:
    id: 'settings-screen'
